# scoring-api

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  db_version.yml  docker-compose.yml  docker-entrypoint.sh  init-postgres.sql  pyproject.toml  werf-giterminism.yaml  werf.yaml
.helm/: Chart.yaml  secret-values.yaml  values.yaml
app/: db.py  generate_db_scripts.py  main.py
app/analytics/: models.py  query_builder.py  repository.py  router.py  schemas.py  service.py
app/audience/: query_builder.py  repository.py  router.py  schemas.py  service.py
app/claimed/: models.py  query_builder.py  repository.py  router.py  schemas.py  service.py
app/common/: cloud_storage.py  enums.py  export.py  helpers.py  partitioned.py  query_builder.py  schemas.py
app/dictionary/: enums.py  mapper.py  models.py  repository.py  router.py  schemas.py  service.py
app/fixed_list/: models.py  query_builder.py  repository.py  router.py  schemas.py  service.py
app/healthcheck/: router.py  service.py
app/inputs/: __init__.py  mapper.py  models.py  repository.py  router.py  schemas.py  service.py
app/metrics/: metrics.py  middleware.py  router.py  service.py
app/nft_holders/: models.py  query_builder.py  repository.py  router.py  schemas.py  service.py
app/rest/: app.py  error_handlers.py
app/settings/: settings.py
app/top_collections/: models.py  repository.py  router.py  schemas.py  service.py
app/wallet/: mapper.py  models.py  query_builder.py  repository.py  router.py  schemas.py  service.py  similar_wallets_api.py
scripts/: step_1.sql  step_2.sql
tests/analytics/: test_repository.py  test_router.py  test_service.py
tests/audience/: test_repository.py  test_router.py  test_service.py
tests/claimed/: test_repository.py  test_router.py  test_service.py
tests/common/: test_enums.py  test_helpers.py
tests/dictionary/: test_mapper.py  test_repository.py  test_router.py  test_service.py
tests/fixed_list/: test_repository.py  test_router.py  test_service.py
tests/healthcheck/: test_router.py  test_service.py
tests/inputs/: test_mapper.py  test_repository.py  test_router.py  test_service.py
tests/nft_holders/: test_repository.py  test_router.py  test_service.py
tests/rest/: test_app.py
(+17 files in other folders)
